# RigidBodyKinematics

./: .gitignore  CMakeLists.txt  README.md  RigidBodyKinematicsConfig.cmake  install.sh  run_tests.sh
Examples/angles_to_dcm/: CMakeLists.txt  README.md
Examples/angles_to_dcm/source/: main.cpp
Examples/frames/: CMakeLists.txt  README.md
Examples/frames/source/: main.cpp
RigidBodyKinematics/CMake/: RigidBodyKinematicsConfig.cmake
Tests/: CMakeLists.txt  Tests.cpp  Tests.hpp  main.cpp
cmake/: FindOmpGcc.cmake
include/: RigidBodyKinematics.hpp
source/: RigidBodyKinematics.cpp  RigidBodyKinematics.py
